# templo

./: .gitignore  Cargo.toml  LICENSE  README.md  sample.tpo
.github/workflows/: rust.yml
folder-for-tests/: ([ filename  ]).js  ([ filename  ]).rs  ([ filename ]).js  ([filename]).js  rust-file.rs  test-config-args
folder-for-tests/TemplateConfig/: args.json  ignore.json
guides/: gen-templates.md  get-templates.md  registry-remote-repos.md  save-templates.md  vizualize-templates.md
help_files/: delete.json  delete.yml  generate.json  generate.yml  get.json  get.yml  method.json  mod.json  move.json  move.yml  registry.json  registry.yml  repo.json  repo.yml  repos.json  repos.yml  save.json  save.yml  update.json  update.yml  view.json  view.yml
help_files/registry/: add.json  mod.json  remove.json  update.json
help_files/repos/: create.json  delete.json  mod.json
src/: main.rs
src/cli/: input.rs
src/cli/input/: args.rs  command.rs  mod.rs  namespaces.rs
src/cli/output/: help.rs  messages.rs  mod.rs  paint.rs
src/commands/: config.rs  create.rs  delete.rs  describe.rs  discover.rs  documentation.rs  explore.rs  generate.rs  get.rs  help.rs  init.rs  login.rs  logout.rs  mod.rs  profile.rs  prottern.rs  publish.rs  reg.rs  register.rs  remove.rs  repository.rs  save.rs  signup.rs  templates.rs  templo.rs  unpub.rs  update.rs  version.rs
src/commands/user/: chpw.rs  (+4 more)
src/core/: errors.rs  info.rs  mod.rs  path.rs  tests.rs
src/methods/: delete.rs  describe.rs  docs.rs  generate.rs  get.rs  help.rs  mod.rs  move.rs  namespace.rs  registry.rs  repo.rs  repos.rs  save.rs  update.rs  version.rs  view.rs  welcome.rs
src/tests/: mod.rs  path_functions_tests.rs
src/utils/: date.rs  errors.rs  mod.rs  path.rs  paths.rs  string.rs  structs.rs
test-create/content-dir/: index.html
(+109 files in other folders)
