[package]
name = "prottern"
version = "0.1.0"
authors = ["Lucas-Lopes-Pultz <pultzlucas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
fs-tree = "0.1.3"
regex = "1.5.4"
base64 = "0.13.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
