[package]
name = "prottern"
version = "0.1.0"
authors = ["Lucas-Lopes-Pultz <pultzlucas@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Lucas-Lopes-Pultz/prottern-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
fs-tree = "0.1.3"
regex = "1.5.4"
base64 = "0.13.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
scanpw = "0.1.0"
termcolor = "1.1.2"
tabled = "0.2"
